--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "semver": "^4.3.3",
     "spin": "0.0.1",
     "tar-stream": "^1.1.4",
+    "tunnel": "0.0.3",
     "unzip": "^0.1.11"
   },
   "bundledDependencies": [
