--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "electron-updater",
-  "version": "0.1.3",
+  "name": "electron-updater-snowcxt",
+  "version": "0.0.3",
   "description": "Cross platform auto-updater for electron applications",
   "main": "index.js",
   "author": "Evolve LLC",
@@ -28,20 +28,19 @@
     "async": "^0.9.0",
     "commander": "^2.8.1",
     "glob": "^5.0.14",
-    "got": "^4.1.1",
     "minimist": "^1.1.1",
+    "request": "^2.62.0",
     "semver": "^4.3.3",
     "spin": "0.0.1",
     "tar-stream": "^1.1.4",
-    "tunnel": "0.0.3",
     "unzip": "^0.1.11"
   },
   "bundledDependencies": [
     "appdirectory",
     "async",
     "glob",
-    "got",
     "minimist",
+    "request",
     "semver",
     "spin",
     "tar-stream",
